# pypkg

./: README.md  setup.py
.github/: release-drafter.yml
.github/workflows/: Issues.yml  release-drafter.yml
docs/: README_JA.md  README_KR.md  README_SC.md  README_TC.md
pypkg/: __version__.py  exceptions.py
pypkg/cli/: about.py  add.py  chenge_version.py  exceptions.py  init.py  install.py  main.py  pyproject.toml
pypkg/cli/commands/: command.py
pypkg/core/: exceptions.py  sysinfo.py
